--- a/src/main/resources/templates/home/user/shoppingCart/shoppingCart.html
+++ b/src/main/resources/templates/home/user/shoppingCart/shoppingCart.html
@@ -439,6 +439,12 @@
                                             data-quantity="plus" type="button" onclick="increaseQuantity(this)">+
                                     </button>
                                 </div>
+                                <div style="width: 13%;align-items: flex-end;padding-right: 0;" class="a-center" hidden="hidden">
+                                    <span class="cart-price">
+                                        <span class="money product_total" th:id="${cart.id}"
+                                              th:text="${cart.unitPrice*cart.cartQuantity}"></span>
+                                    </span>
+                                </div>
                                 <a class="button remove-item remove-item-cart"
                                    th:name="*{cart.id}"
                                    title="Xóa"
@@ -731,7 +737,6 @@
         document.getElementById('input-desktop-' + cartId).value = value;
         updateCartItemQuantity(cartId, value);
     }
-
 
     function calculateTotalAmount() {
         let totalAmountElements = document.querySelectorAll('.totalAmountElement');
