--- a/src/main/resources/templates/home/user/shoppingCart/shoppingCart.html
+++ b/src/main/resources/templates/home/user/shoppingCart/shoppingCart.html
@@ -441,8 +441,7 @@
                                 </div>
                                 <div style="width: 13%;align-items: flex-end;padding-right: 0;" class="a-center" hidden="hidden">
                                     <span class="cart-price">
-                                        <span class="money product_total" th:id="${cart.id}"
-                                              th:text="${cart.unitPrice*cart.cartQuantity}"></span>
+                                        <span class="money product_total" th:id="${cart.id}">0</span>
                                     </span>
                                 </div>
                                 <a class="button remove-item remove-item-cart"
