--- a/src/main/resources/templates/home/user/profile/profile.html
+++ b/src/main/resources/templates/home/user/profile/profile.html
@@ -179,6 +179,7 @@
                     <p><strong>Họ tên:</strong> <span th:text="${user.fullName}"></span></p>
                     <p><strong>Email:</strong> <span th:text="${user.email}"></span></p>
                     <p><strong>Điện thoại:</strong> <span th:text="${user.phone}"></span></p>
+                    <p><strong>Ngày sinh:</strong> <span th:text="${user.dateOfBirth}"></span></p>
                     <p><strong>Địa chỉ :</strong> <span th:text="${user.address}"></span></p>
 
                 </div>
