--- a/src/main/resources/templates/home/user/news/news.html
+++ b/src/main/resources/templates/home/user/news/news.html
@@ -250,7 +250,7 @@
                         ngoái (ảnh: Business Insider)
                         Theo&nbsp;Business Insider, tuần vừa rồi đã là một tuần tốt lành với Sears. Vào ngày 20/7 vừa
                         qua, giá cổ phiếu của hãng đã tăng vọt lên ít nhất 20%, khi...</p>
-                    <a href="/user/news3">Chi tiết</a>
+                    <a href="/user/news3" class="btn btn-upper btn-primary read-more">Chi tiết</a>
                 </div>
             </section>
         </section>
