--- a/src/main/resources/templates/home/user/product/shopProduct.html
+++ b/src/main/resources/templates/home/user/product/shopProduct.html
@@ -194,7 +194,7 @@
                     </div>
                 </div>
             </div>
-            <div class="category-products category-product products">
+            <div class="category-product products">
 
                 <div class="sortPagiBar">
                     <div class="row">
@@ -212,7 +212,7 @@
                                     <label class="left hidden-xs">Sắp xếp</label>
                                     <ul>
                                         <li>
-                                            <span>Mặc định</span>
+                                            <span th:text="${sortText!=null}?${sortText}:'Mặc định'"></span>
                                             <ul id="sort-options">
                                                 <li><a href="#" class="awe_sortby" data-value="id-desc">Mặc định</a></li>
                                                 <li><a href="#" class="awe_sortby" data-value="product_name-asc">A &rarr; Z</a></li>
@@ -369,12 +369,12 @@
                         </div>
                         <div class="aside-content filter-group">
                             <ul>
-                                <li class="filter-item filter-item--check-box filter-item--green"
+                                <li class="filter-item  "
                                     th:each="item:${categories}">
                                     <span>
-                                        <form class="filterForm" action="/shop">
+                                        <form class="filterForm" action="/user/shop">
                                             <label>
-                                                <input type="checkbox" th:id="'categoryId'+${item.id}" name="categoryId" th:value="*{item.id}" th:checked="${categoryId==item.id}">
+                                                <input type="checkbox" th:id="'categoryId'+${item.id}" name="categoryId" th:value="*{item.id}" th:checked="${#strings.equals(categoryIdChecked, item.id)}">
                                                 <input type="hidden"
                                                        th:attr="name=${brandId != null ? 'brandId' : null}, value=${brandId != null ? brandId : null}"/>
                                                 <input type="hidden"
@@ -397,14 +397,14 @@
                         </div>
                         <div class="aside-content filter-group">
                             <ul>
-                                <li class="filter-item filter-item--check-box filter-item--green"
+                                <li class="filter-item "
                                     th:each="item:${brands}">
                                         <span>
-                                            <form class="filterForm" action="/shop">
+                                            <form class="filterForm" action="/user/shop">
                                                 <label>
                                                     <input type="hidden"
                                                            th:attr="name=${categoryId != null ? 'categoryId' : null}, value=${categoryId != null ? categoryId : null}"/>
-                                                    <input type="checkbox" name="brandId" data-group="Hãng" class="brandId" th:value="*{item.id}" >
+                                                    <input type="checkbox" name="brandId" data-group="Hãng" class="brandId" th:value="*{item.id}" th:checked="${#strings.equals(brandIdChecked, item.id)}">
                                                     <input type="hidden"
                                                            th:attr="name=${startPrice != null ? 'startPrice' : null}, value=${startPrice != null ? startPrice : null}"/>
                                                     <input type="hidden"
@@ -425,7 +425,7 @@
                             <h2 class="title-head margin-top-0"><span>Mức giá</span></h2>
                         </div>
                         <div class="aside-content filter-group">
-                            <form action="/shop">
+                            <form action="/user/shop">
                                 <input type="hidden"
                                        th:attr="name=${categoryId != null ? 'categoryId' : null}, value=${categoryId != null ? categoryId : null}"/>
                                 <input type="hidden"
@@ -433,6 +433,7 @@
                                 <div id='slider'></div>
                                 <div id='start'><input name="startPrice" class="startPrice" value="0"></div>
                                 <div id='stop'><input name="endPrice"  class="endPrice" value="100000000₫"></div>
+                                <input type="hidden" th:attr="name=${filter != null ? 'filter' : null}, value=${filter != null ? filter : null}" />
                                 <a id="old-value" href="javascript:;"></a>
                                 <button id="filter-value" class="btn btn-primary" href="javascript:;" type="submit"
                                         data-value="(>-1 AND <10000001)">Lọc giá
